--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button id="calculateBtn">Calculate Age</button>
         <p id="result">Age Difference: 0 years, 0 months, and 0 days.</p>
     </div>
-    <script src="Age_script.js"></script>
+    <script src="scriptt.js"></script>
 </body>
 </html>
+
